Revert "fix(ContextMenuItem): hide all overflow, not only overflow-x"
This reverts commit 326c13e530a883a9866dba247a68916ad66a157d.

--- a/packages/axiom-components/src/Context/Context.css
+++ b/packages/axiom-components/src/Context/Context.css
@@ -157,7 +157,7 @@
 
 .ax-context-menu__item-content {
   flex: 1 1 auto;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .ax-context-menu__item-checkbox {
